[gd_scene load_steps=33 format=2]

[ext_resource path="res://Sprites/Characters/Body/body3.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Characters/accessories/hat_witch.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Characters/clothes/pants/skirt2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Characters/Hair/spacebuns2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Characters/clothes/shirts/sporty9.png" type="Texture" id=5]
[ext_resource path="res://Script/PlayerPreveiw.gd" type="Script" id=6]
[ext_resource path="res://Shaders/gradient_color_effect.gdshader" type="Shader" id=7]
[ext_resource path="res://Fonts/futile-pro-v1/FutilePro.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Shaders/Button_shader.tres" type="Shader" id=9]
[ext_resource path="res://Sprites/arrow.png" type="Texture" id=10]
[ext_resource path="res://Script/CharacterCreation.gd" type="Script" id=11]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 7 )
shader_param/gradient_color_1 = Color( 1, 0.827451, 0.215686, 1 )
shader_param/gradient_color_2 = Color( 0.945098, 0.356863, 0.356863, 1 )
shader_param/gradient_color_3 = Color( 1, 1, 1, 1 )
shader_param/gradient_start = Vector2( 0.984, 0 )
shader_param/gradient_end = null

[sub_resource type="Animation" id=1]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("CompositeSprite/body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 8 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CompositeSprite/body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 8 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 7 )
shader_param/gradient_color_1 = Color( 1, 1, 1, 1 )
shader_param/gradient_color_2 = Color( 0.439216, 0.54902, 0.996078, 1 )
shader_param/gradient_color_3 = Color( 0.0470588, 0.321569, 0.984314, 1 )
shader_param/gradient_start = Vector2( -1.052, 2.041 )
shader_param/gradient_end = null

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/gradient_color_1 = Color( 0.976471, 0.827451, 0.717647, 1 )
shader_param/gradient_color_2 = Color( 0.901961, 0.309804, 0.309804, 1 )
shader_param/gradient_color_3 = Color( 0.980392, 0.662745, 0.105882, 1 )
shader_param/gradient_start = Vector2( 1.081, 0.814 )
shader_param/gradient_end = null

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.419608, 0.411765, 0.411765, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.419608, 0.411765, 0.411765, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.419608, 0.411765, 0.411765, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.419608, 0.411765, 0.411765, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/gradient_color_1 = Color( 1, 0.666667, 0.666667, 1 )
shader_param/gradient_color_2 = Color( 1, 0.4, 0, 1 )
shader_param/gradient_color_3 = Color( 0.0823529, 0.835294, 0.698039, 1 )
shader_param/gradient_start = Vector2( 3.957, 0 )
shader_param/gradient_end = null

[sub_resource type="StyleBoxFlat" id=17]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=18]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=19]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.662745, 0.207843, 0.207843, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=16]
size = 41
font_data = ExtResource( 8 )

[node name="CharacterCreation" type="Node2D"]
script = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="Panel" parent="CanvasLayer"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Player" type="Node2D" parent="CanvasLayer"]
position = Vector2( 144, 178 )
scale = Vector2( 3, 3 )
script = ExtResource( 6 )

[node name="CompositeSprite" type="Node2D" parent="CanvasLayer/Player"]

[node name="body" type="Sprite" parent="CanvasLayer/Player/CompositeSprite"]
texture = ExtResource( 1 )
hframes = 8
vframes = 49

[node name="hair" type="Sprite" parent="CanvasLayer/Player/CompositeSprite"]
texture = ExtResource( 4 )
hframes = 8
vframes = 49

[node name="accessory" type="Sprite" parent="CanvasLayer/Player/CompositeSprite"]
texture = ExtResource( 2 )
hframes = 8
vframes = 49

[node name="shirt" type="Sprite" parent="CanvasLayer/Player/CompositeSprite"]
texture = ExtResource( 5 )
hframes = 8
vframes = 49

[node name="pants" type="Sprite" parent="CanvasLayer/Player/CompositeSprite"]
texture = ExtResource( 3 )
hframes = 8
vframes = 49

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Player"]
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Nametag" type="Label" parent="CanvasLayer/Player"]
margin_left = -24.0
margin_top = -18.6667
margin_right = 69.0
margin_bottom = -4.66666
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 21 )
align = 1
valign = 1

[node name="Panel" type="Panel" parent="CanvasLayer"]
material = SubResource( 5 )
margin_left = 336.0
margin_top = 15.0
margin_right = 538.0
margin_bottom = 208.0
rect_min_size = Vector2( 220, 200 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
margin_top = 42.0
custom_constants/separation = 7

[node name="Body" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
margin_right = 220.0
margin_bottom = 20.0
alignment = 1

[node name="previous_body" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Body"]
material = SubResource( 12 )
margin_left = 41.0
margin_right = 61.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 9 )
text = "<"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Body/previous_body"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -12.0
margin_right = 34.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
flip_h = true

[node name="composite" type="Label" parent="CanvasLayer/Panel/VBoxContainer/Body"]
margin_left = 65.0
margin_top = 3.0
margin_right = 155.0
margin_bottom = 17.0
rect_min_size = Vector2( 90, 0 )
text = "BODY"
align = 1

[node name="next_body" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Body"]
material = SubResource( 12 )
margin_left = 159.0
margin_right = 179.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = ">"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Body/next_body"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -12.0
margin_right = 38.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Hair" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 27.0
margin_right = 220.0
margin_bottom = 47.0
alignment = 1

[node name="previous_hair" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Hair"]
material = SubResource( 12 )
margin_left = 41.0
margin_right = 61.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = "<"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Hair/previous_hair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -12.0
margin_right = 34.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
flip_h = true

[node name="composite" type="Label" parent="CanvasLayer/Panel/VBoxContainer/Hair"]
margin_left = 65.0
margin_top = 3.0
margin_right = 155.0
margin_bottom = 17.0
rect_min_size = Vector2( 90, 0 )
text = "HAIR  "
align = 1

[node name="next_hair" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Hair"]
material = SubResource( 12 )
margin_left = 159.0
margin_right = 179.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = ">"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Hair/next_hair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -12.0
margin_right = 38.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Accessory" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 220.0
margin_bottom = 74.0
alignment = 1

[node name="previous_acc" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Accessory"]
material = SubResource( 12 )
margin_left = 41.0
margin_right = 61.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
rect_pivot_offset = Vector2( -229, -10 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = "<"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Accessory/previous_acc"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -12.0
margin_right = 34.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
flip_h = true

[node name="composite" type="Label" parent="CanvasLayer/Panel/VBoxContainer/Accessory"]
margin_left = 65.0
margin_top = 3.0
margin_right = 155.0
margin_bottom = 17.0
rect_min_size = Vector2( 90, 0 )
text = "ACCESSORY"
align = 1

[node name="next_acc" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Accessory"]
material = SubResource( 12 )
margin_left = 159.0
margin_right = 179.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = ">"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Accessory/next_acc"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -12.0
margin_right = 38.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Shirt" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 81.0
margin_right = 220.0
margin_bottom = 101.0
alignment = 1

[node name="previous_shirt" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Shirt"]
material = SubResource( 12 )
margin_left = 41.0
margin_right = 61.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
rect_pivot_offset = Vector2( -237, -51 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = "<"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Shirt/previous_shirt"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -12.0
margin_right = 34.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
flip_h = true

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Shirt/previous_shirt/icon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -12.0
margin_right = 38.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="composite" type="Label" parent="CanvasLayer/Panel/VBoxContainer/Shirt"]
margin_left = 65.0
margin_top = 3.0
margin_right = 155.0
margin_bottom = 17.0
rect_min_size = Vector2( 90, 0 )
text = "SHIRT"
align = 1

[node name="next_shirt" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Shirt"]
material = SubResource( 12 )
margin_left = 159.0
margin_right = 179.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = ">"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Shirt/next_shirt"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -12.0
margin_right = 38.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Pants" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 108.0
margin_right = 220.0
margin_bottom = 128.0
alignment = 1

[node name="previous_pants" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Pants"]
material = SubResource( 12 )
margin_left = 41.0
margin_right = 61.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = "<"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Pants/previous_pants"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -12.0
margin_right = 34.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
flip_h = true

[node name="composite" type="Label" parent="CanvasLayer/Panel/VBoxContainer/Pants"]
margin_left = 65.0
margin_top = 3.0
margin_right = 155.0
margin_bottom = 17.0
rect_min_size = Vector2( 90, 0 )
text = "PANTS"
align = 1

[node name="next_pants" type="Button" parent="CanvasLayer/Panel/VBoxContainer/Pants"]
material = SubResource( 12 )
margin_left = 159.0
margin_right = 179.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = ">"

[node name="icon" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/Pants/next_pants"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -12.0
margin_right = 38.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="PlayButton" type="Button" parent="CanvasLayer"]
material = SubResource( 15 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -80.0
margin_right = -50.0
margin_bottom = -59.885
rect_min_size = Vector2( 200, 50 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="PlayButtonLabel" type="Label" parent="CanvasLayer/PlayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 16 )
text = "JOUER"
align = 1
valign = 1

[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Body/previous_body" to="CanvasLayer/Player" method="_on_previous_body_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Body/next_body" to="CanvasLayer/Player" method="_on_next_body_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Hair/previous_hair" to="CanvasLayer/Player" method="_on_previous_hair_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Hair/next_hair" to="CanvasLayer/Player" method="_on_next_hair_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Accessory/previous_acc" to="CanvasLayer/Player" method="_on_previous_acc_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Accessory/next_acc" to="CanvasLayer/Player" method="_on_next_acc_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Shirt/previous_shirt" to="CanvasLayer/Player" method="_on_previous_shirt_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Shirt/next_shirt" to="CanvasLayer/Player" method="_on_next_shirt_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Pants/previous_pants" to="CanvasLayer/Player" method="_on_previous_pants_button_up"]
[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/Pants/next_pants" to="CanvasLayer/Player" method="_on_next_pants_button_up"]
